// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App|acceptance angular-cli 1`] = `
<iframe
  src="/angular-cli/index.html"
  style="border:0;position:absolute;top:0;left:0;width:100vw;height:100vh"
  title="angular-cli"
/>
`;

exports[`Storyshots App|acceptance cra-kitchen-sink 1`] = `
<iframe
  src="/cra-kitchen-sink/index.html"
  style="border:0;position:absolute;top:0;left:0;width:100vw;height:100vh"
  title="cra-kitchen-sink"
/>
`;

exports[`Storyshots App|acceptance polymer-cli 1`] = `
<iframe
  src="/polymer-cli/index.html"
  style="border:0;position:absolute;top:0;left:0;width:100vw;height:100vh"
  title="polymer-cli"
/>
`;

exports[`Storyshots App|acceptance vue-kitchen-sink 1`] = `
<iframe
  src="/vue-kitchen-sink/index.html"
  style="border:0;position:absolute;top:0;left:0;width:100vw;height:100vh"
  title="vue-kitchen-sink"
/>
`;
